--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: csharp
-solution: "./TP_lb3_Mass.sln"
-os: windows
+mono: none
+dotnet: 2.0.0
+
 install:
-- travis_retry nuget restore -source "https://www.nuget.org/api/v2" ./TP_lb3_Mass.sln
+- dotnet restore
+
 script:
-- xbuild ./TP_lb3_Mass.sln
-- mono ./ClassOperTests/packages/xunit.runner.console*/tools/xunit.console.exe ./ClassOperTests/bin/Debug/ClassOperTests.dll
+ - dotnet build
+ - dotnet test ClassOperTests/ClassOperTests.csproj
