--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,7 @@
 language: csharp
 solution: Laba_TP_1_1.sln
 
-env:
-  # HAXE_VER:
-  #  - unset/empty or "latest": get latest from hxbuilds
-  #  - 3.1.3 or 3.1.2: get them from hxbuilds
-  #  - other: build from git
-  global:
-  matrix:
-    - TARGET=cs
-      # optional: FILENAME
-
-matrix:
-  fast_finish: true
-  allow_failures:
-    - env: SOME_ENV_HERE=some_opt
-
-
-script:
-  - cd $TRAVIS_BUILD_DIR
-  # build the target. This will call haxe with the HXFLAGS and HXFLAGS_EXTRA environment variables
-  - HXFLAGS="-cp src -main test.TestAll" ~/travis-hx/build.sh
-  # run the tests
-  - ~/travis-hx/runtests.sh $ClassLibrary1Tests # this will set the $FILENAME defined on the environment variable to run the tests
+mono:
+  - latest
+  - 3.12.0
+  - 3.10.0
