--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ install:
   - nuget restore TP_lb3_Mass.sln
   - nuget install NUnit.Runners -OutputDirectory testrunner
 script:
-  - xbuild /p:Configuration=Release TP_lb3_Mass.sln
-  - mono ./testrunner/NUnit.Runners.3.10.1/tools/nunit3-console.exe ./ClassOperTests1/bin/Debug/ClassOperTests1.dll
+  - xbuild TP_lb3_Mass.sln /p:TargetFrameworkVersion="v4.5.1" /p:Configuration=Stress
+  - mono ./testrunner/NUnit.ConsoleRunner.3.2.0/tools/nunit3-console.exe ./ClassOperTests1/bin/Debug/ClassOperTests1.dll
