--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: csharp
 solution: TP_lb3_Mass.sln
 install:
   - nuget restore TP_lb3_Mass.sln
-  - nuget install NUnit.Runners -OutputDirectory testrunner
+  - nuget install NUnit.Runners -Version 3.7.0 -OutputDirectory testrunner
 script:
-  - xbuild TP_lb3_Mass.sln /p:TargetFrameworkVersion="v4.5.1" /p:Configuration=Stress
-  - mono ./testrunner/NUnit.ConsoleRunner.3.2.0/tools/nunit3-console.exe ./ClassOperTests1/bin/Release/ClassOperTests1.dll
+  - xbuild /p:Configuration=Release TP_lb3_Mass.sln
+  - mono ./testrunner/NUnit.ConsoleRunner.3.7.0/tools/nunit3-console.exe ./ClassOperTests1/bin/Release/ClassOperTests1.dll
