--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,7 @@
 language: csharp
 solution: Laba_TP_1_1.sln
-
-env:
-
-  matrix:
-    - TARGET=cs
-
-matrix:
-  fast_finish: true
-  allow_failures:
-    - env: SOME_ENV_HERE=some_opt
-
-before_install: # clone travis-hx repo
-  - travis_retry git clone --depth=50 --branch= Kravets_laba_1  https://github.com/tsokota/SummerPractise.git
-install: # setup the target
-  - ~/travis-hx/setup.sh
-
-script:
-  - cd $TRAVIS_BUILD_DIR
-  # build the target. This will call haxe with the HXFLAGS and HXFLAGS_EXTRA environment variables
-  - HXFLAGS="-cp src -main test.TestAll" ~/travis-hx/build.sh
-  # run the tests
-- ~/travis-hx/runtests.sh $FILENAME # this will set the $FILENAME defined on the environment variable to run the tests
+sudo: required  
+mono: none
+dist: trusty  
+script:  
+  - dotnet test ./ClassLibrary1Tests -c Release -f netcoreapp2.0
