--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: csharp
 solution: Laba_TP_1_1.sln
 sudo: required  
-dotnet: 2.0.0-preview2-006497
 mono: none
 dist: trusty  
+ matrix:
+ - TARGET=cs
 script:  
-  - dotnet test ./Class1Tests.cs -c Release -f netcoreapp2.0
+ - cd $TRAVIS_BUILD_DIR
+  # build the target. This will call haxe with the HXFLAGS and HXFLAGS_EXTRA environment variables
+- HXFLAGS="-cp src -main test.TestAll" ~/travis-hx/build.sh
+
