--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 language: csharp
 solution: Laba_TP_1_1.sln
-sudo: required  
-mono: none
-dist: trusty  
- matrix:
- - TARGET=cs
-script:  
- - cd $TRAVIS_BUILD_DIR
-- HXFLAGS="-cp src -main test.TestAll" ~/travis-hx/build.sh
-
+install:
+- nuget restore Laba_TP_1_1.sln
+- nuget install NUnit.Runners -Version 3.7.0 -OutputDirectory testrunner
+script:
+- xbuild /p:Configuration=Release Laba_TP_1_1.sln
+- mono ./testrunner/NUnit.ConsoleRunner.3.7.0/tools/nunit3-console.exe ./ClassOperTests1/bin/Release/ClassOperTests1.dll
