--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: csharp
 solution: Laba_TP_1_1.sln
 install:
-- nuget restore $Laba_TP_1_1.sln
+- nuget restore 'Laba_TP_1_1.sln'
 - nuget install NUnit.Runners -Version 3.7.0 -OutputDirectory testrunner
 script:
 - xbuild /p:Configuration=Release Laba_TP_1_1.sln
