--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: csharp
 solution: TP_lb3_Mass.sln
 install:
-- nuget restore TP_lb3_Mass.sln
+- nuget restore 'TP_lb3_Mass.sln'
 - nuget install NUnit.Runners -Version 3.7.0 -OutputDirectory testrunner
 script:
 - xbuild /p:Configuration=Release TP_lb3_Mass.sln
