--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ matrix:
     - TARGET: cs
 
 install: # clone travis-hx repo and setup the target
-  - git clone --depth=50 --branch=master git://github.com/waneck/travis-hx.git C:\travis-hx
+  - git clone --depth=50 --branch=master github.com/tsokota/SummerPractise.git C:\travis-hx
   - copy C:\travis-hx\extra\appveyor\AppVeyor.exe C:\travis-hx
   - C:\travis-hx\AppVeyor.exe setup
 
