--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: csharp
-solution: TP_lb3_Mass.sln
+solution: lb7_TP.sln
 install:
-- nuget restore 'TP_lb3_Mass.sln'
+- nuget restore 'lb7_TP.sln'
 - nuget install NUnit.Runners -Version 3.7.0 -OutputDirectory testrunner
 script:
-- xbuild /p:Configuration=Release TP_lb3_Mass.sln
-- mono ./testrunner/NUnit.ConsoleRunner.3.7.0/tools/nunit3-console.exe ./ClassOperTests1/bin/Release/ClassOperTests1.dll
+- xbuild /p:Configuration=Release lb7_TP.sln
+- mono ./testrunner/NUnit.ConsoleRunner.3.7.0/tools/nunit3-console.exe ./lb7_TPTests1/bin/Release/lb7_TPTests1.dll
